# Viaticos

./: .env.example  README.md  SPEC_Codex_Viaticos_Dash_Gemini.md  app.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  run.py  tmp_docs.db  tmp_leg.db  tmp_mod3_check.db  tsconfig.json  viaticos.db
